# time-block-tracker

./: LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
data/: time_log.csv
report/: main.tex
src/timeblock/: cli.py  core.py  plot.py
tests/: test_core.py  test_plot.py
