[project]
name = "time-block-tracker"
version = "0.1.0"
description = "A lightweight command-line tool for recording daily activities with time blocks and Pomodoro sessions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
timeblock = "timeblock.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
